# proyecto-1

./: .gitignore  Dockerfile  Experimento.md  README.md  actions.py  app.py  commands.py  consumers.py  create_mock_data.py  db.py  docker-compose.yml  events.py  models.py  queries.py  schema.sql
ExperimentoDisponibilidad/: Dockerfile  README.md  actions.py  app.py  commands.py  consumers.py  d.uml  db.py  diagrama_componentes.uml  diagrama_despliegue.uml  diagrama_secuencia.uml  docker-compose.yml  events.py  models.py  queries.py  requirements.txt  schema.sql  unit_of_work.py
ExperimentoSeguridad/: .gitignore  .pre-commit-config.yaml  .venv.example  Dockerfile  Dockerfile.prod  README.md  README_EXPERIMENTO.md  README_JWT_RS256.md  check_jwt_libs.py  create_admin_user.py  dev.py  docker-compose.yml  init.sql  nginx.conf  postman_collection.json  prometheus.yml  pyproject.toml  requirements.txt  setup_experiment.sh  test_db.py  test_experiment.py  test_jwt_rs256.py
ExperimentoSeguridad/Docs/: UserService.postman_collection.json
ExperimentoSeguridad/app/: config.py  main.py
ExperimentoSeguridad/app/middleware/: jwt_middleware.py
ExperimentoSeguridad/app/models/: db_models.py  user.py
ExperimentoSeguridad/app/routes/: user_routes.py
ExperimentoSeguridad/app/services/: key_service.py  redis_service.py  user_service.py
ExperimentoSeguridad/app/utils/: auth.py  key_manager.py  rbac.py  revocation_store.py
ExperimentoSeguridad/config/: config.py
ExperimentoSeguridad/grafana/dashboards/: jwt-experiment.json
ExperimentoSeguridad/keys/: jwks.json  key-1.json  key-1760855740.json  key-1760855752.json  key-1760855753.json  key-1760855754.json  key-1760855755.json  key-1760855757.json  key-1760855758.json  key-1760855759.json  key-1760855960.json  key-1760855971.json  key-1760855972.json  key-1760855973.json  key-1760855974.json  key-1760855976.json  key-1760855977.json  key-1760855978.json  key-1760855979.json  key-1760931984.json  key-1760931996.json  key-1760931998.json  key-1760932000.json  key-1760932002.json  key-1760932005.json  key-1760932008.json  key-1760932010.json  private_key.pem  public_key.pem
ExperimentoSeguridad/scripts/: generate_keys.py
ExperimentoSeguridad/tests/: conftest.py  test_access_roles.py  test_auth_integration.py  test_clock_skew.py  test_expired_token.py  test_invalid_signature.py  test_key_rotation.py  test_key_service.py  test_login_ok.py  test_metrics_exposed.py  test_revocation_redis_down.py  test_user_service.py
MediSupply Web/: .gitignore  README.md  babel.config.js  cypress.config.ts  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
cqrs-chart/: Chart.yaml
informes/: Dockerfile  README.md  docker-compose.yml  (+2 more)
(+278 files in other folders)
